Code/syntax.output
Terminals unused in grammar

    LOWER_THAN_ELSE


State 59 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | ε

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | error SEMI
    9       | Specifier error SEMI
   10       | error Specifier SEMI

   11 ExtDecList: VarDec
   12           | VarDec COMMA ExtDecList

   13 Specifier: TYPE
   14          | StructSpecifier

   15 StructSpecifier: STRUCT OptTag LC DefList RC
   16                | STRUCT Tag

   17 OptTag: ID
   18       | ε

   19 Tag: ID

   20 VarDec: ID
   21       | VarDec LB INT RB
   22       | VarDec LB error RB
   23       | VarDec LB INT RB error

   24 FunDec: ID LP VarList RP
   25       | ID LP RP
   26       | ID LP error RP
   27       | error LP VarList RP

   28 VarList: ParamDec COMMA VarList
   29        | ParamDec

   30 ParamDec: Specifier VarDec

   31 CompSt: LC DefList StmtList RC

   32 StmtList: Stmt StmtList
   33         | ε

   34 Stmt: Exp SEMI
   35     | CompSt
   36     | RETURN Exp SEMI
   37     | IF LP Exp RP Stmt
   38     | IF LP Exp RP Stmt ELSE Stmt
   39     | WHILE LP Exp RP Stmt
   40     | IF error Exp RP Stmt
   41     | IF LP error RP Stmt
   42     | IF LP Exp error Stmt
   43     | WHILE error Exp RP Stmt
   44     | WHILE LP error RP Stmt
   45     | WHILE LP Exp error Stmt
   46     | error SEMI
   47     | Exp error SEMI
   48     | Exp error
   49     | RETURN error SEMI
   50     | RETURN Exp error

   51 DefList: Def DefList
   52        | ε

   53 Def: Specifier DecList SEMI
   54    | Specifier error SEMI
   55    | Specifier DecList error

   56 DecList: Dec
   57        | Dec COMMA DecList

   58 Dec: VarDec
   59    | VarDec ASSIGNOP Exp

   60 Exp: LP Exp RP
   61    | ID LP Args RP
   62    | ID LP RP
   63    | Exp LB Exp RB
   64    | Exp DOT ID
   65    | MINUS Exp
   66    | NOT Exp
   67    | Exp STAR Exp
   68    | Exp DIV Exp
   69    | Exp PLUS Exp
   70    | Exp MINUS Exp
   71    | Exp RELOP Exp
   72    | Exp AND Exp
   73    | Exp OR Exp
   74    | Exp ASSIGNOP Exp
   75    | ID
   76    | INT
   77    | FLOAT
   78    | LP error RP
   79    | ID LP error RP
   80    | Exp LB error RB
   81    | MINUS error
   82    | NOT error
   83    | Exp STAR error
   84    | Exp DIV error
   85    | Exp PLUS error
   86    | Exp MINUS error
   87    | Exp RELOP error
   88    | Exp AND error
   89    | Exp OR error
   90    | Exp ASSIGNOP error

   91 Args: Exp COMMA Args
   92     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8 9 10 22 23 26 27 40 41 42 43 44 45 46 47 48 49 50 54 55 78 79 80 81 82 83 84 85 86 87 88 89 90
    INT (258) 21 23 76
    FLOAT (259) 77
    ID (260) 17 19 20 24 25 26 61 62 64 75 79
    SEMI (261) 4 5 7 8 9 10 34 36 46 47 49 53 54
    COMMA (262) 12 28 57 91
    ASSIGNOP (263) 59 74 90
    RELOP (264) 71 87
    PLUS (265) 69 85
    MINUS (266) 65 70 81 86
    STAR (267) 67 83
    DIV (268) 68 84
    AND (269) 72 88
    OR (270) 73 89
    DOT (271) 64
    NOT (272) 66 82
    TYPE (273) 13
    LP (274) 24 25 26 27 37 38 39 41 42 44 45 60 61 62 78 79
    RP (275) 24 25 26 27 37 38 39 40 41 43 44 60 61 62 78 79
    LB (276) 21 22 23 63 80
    RB (277) 21 22 23 63 80
    LC (278) 15 31
    RC (279) 15 31
    STRUCT (280) 15 16
    RETURN (281) 36 49 50
    IF (282) 37 38 40 41 42
    ELSE (283) 38
    WHILE (284) 39 43 44 45
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program (32)
        on left: 1
        on right: 0
    ExtDefList (33)
        on left: 2 3
        on right: 1 2
    ExtDef (34)
        on left: 4 5 6 7 8 9 10
        on right: 2
    ExtDecList (35)
        on left: 11 12
        on right: 4 12
    Specifier (36)
        on left: 13 14
        on right: 4 5 6 7 9 10 30 53 54 55
    StructSpecifier (37)
        on left: 15 16
        on right: 14
    OptTag (38)
        on left: 17 18
        on right: 15
    Tag (39)
        on left: 19
        on right: 16
    VarDec (40)
        on left: 20 21 22 23
        on right: 11 12 21 22 23 30 58 59
    FunDec (41)
        on left: 24 25 26 27
        on right: 6 7
    VarList (42)
        on left: 28 29
        on right: 24 27 28
    ParamDec (43)
        on left: 30
        on right: 28 29
    CompSt (44)
        on left: 31
        on right: 6 35
    StmtList (45)
        on left: 32 33
        on right: 31 32
    Stmt (46)
        on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
        on right: 32 37 38 39 40 41 42 43 44 45
    DefList (47)
        on left: 51 52
        on right: 15 31 51
    Def (48)
        on left: 53 54 55
        on right: 51
    DecList (49)
        on left: 56 57
        on right: 53 55 57
    Dec (50)
        on left: 58 59
        on right: 56 57
    Exp (51)
        on left: 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90
        on right: 34 36 37 38 39 40 42 43 45 47 48 50 59 60 63 64 65 66 67 68 69 70 71 72 73 74 80 83 84 85 86 87 88 89 90 91 92
    Args (52)
        on left: 91 92
        on right: 61 91


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error • SEMI
   10       | error • Specifier SEMI

    SEMI    shift, and go to state 9
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 10
    StructSpecifier  go to state 8


State 2

   13 Specifier: TYPE •

    $default  reduce using rule 13 (Specifier)


State 3

   15 StructSpecifier: STRUCT • OptTag LC DefList RC
   16                | STRUCT • Tag

    ID  shift, and go to state 11

    $default  reduce using rule 18 (OptTag)

    OptTag  go to state 12
    Tag     go to state 13


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 14


State 5

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 15
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt
    7       | Specifier • FunDec SEMI
    9       | Specifier • error SEMI

    error  shift, and go to state 16
    ID     shift, and go to state 17
    SEMI   shift, and go to state 18

    ExtDecList  go to state 19
    VarDec      go to state 20
    FunDec      go to state 21


State 8

   14 Specifier: StructSpecifier •

    $default  reduce using rule 14 (Specifier)


State 9

    8 ExtDef: error SEMI •

    $default  reduce using rule 8 (ExtDef)


State 10

   10 ExtDef: error Specifier • SEMI

    SEMI  shift, and go to state 22


State 11

   17 OptTag: ID •
   19 Tag: ID •

    LC        reduce using rule 17 (OptTag)
    $default  reduce using rule 19 (Tag)


State 12

   15 StructSpecifier: STRUCT OptTag • LC DefList RC

    LC  shift, and go to state 23


State 13

   16 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 16 (StructSpecifier)


State 14

    0 $accept: Program $end •

    $default  accept


State 15

    2 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 16

    9 ExtDef: Specifier error • SEMI
   27 FunDec: error • LP VarList RP

    SEMI  shift, and go to state 24
    LP    shift, and go to state 25


State 17

   20 VarDec: ID •
   24 FunDec: ID • LP VarList RP
   25       | ID • LP RP
   26       | ID • LP error RP

    LP  shift, and go to state 26

    $default  reduce using rule 20 (VarDec)


State 18

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 19

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 27


State 20

   11 ExtDecList: VarDec •
   12           | VarDec • COMMA ExtDecList
   21 VarDec: VarDec • LB INT RB
   22       | VarDec • LB error RB
   23       | VarDec • LB INT RB error

    COMMA  shift, and go to state 28
    LB     shift, and go to state 29

    $default  reduce using rule 11 (ExtDecList)


State 21

    6 ExtDef: Specifier FunDec • CompSt
    7       | Specifier FunDec • SEMI

    SEMI  shift, and go to state 30
    LC    shift, and go to state 31

    CompSt  go to state 32


State 22

   10 ExtDef: error Specifier SEMI •

    $default  reduce using rule 10 (ExtDef)


State 23

   15 StructSpecifier: STRUCT OptTag LC • DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 52 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 34
    Def              go to state 35


State 24

    9 ExtDef: Specifier error SEMI •

    $default  reduce using rule 9 (ExtDef)


State 25

   27 FunDec: error LP • VarList RP

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 36
    StructSpecifier  go to state 8
    VarList          go to state 37
    ParamDec         go to state 38


State 26

   24 FunDec: ID LP • VarList RP
   25       | ID LP • RP
   26       | ID LP • error RP

    error   shift, and go to state 39
    TYPE    shift, and go to state 2
    RP      shift, and go to state 40
    STRUCT  shift, and go to state 3

    Specifier        go to state 36
    StructSpecifier  go to state 8
    VarList          go to state 41
    ParamDec         go to state 38


State 27

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 28

   12 ExtDecList: VarDec COMMA • ExtDecList

    ID  shift, and go to state 42

    ExtDecList  go to state 43
    VarDec      go to state 20


State 29

   21 VarDec: VarDec LB • INT RB
   22       | VarDec LB • error RB
   23       | VarDec LB • INT RB error

    error  shift, and go to state 44
    INT    shift, and go to state 45


State 30

    7 ExtDef: Specifier FunDec SEMI •

    $default  reduce using rule 7 (ExtDef)


State 31

   31 CompSt: LC • DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 52 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 46
    Def              go to state 35


State 32

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 33

   53 Def: Specifier • DecList SEMI
   54    | Specifier • error SEMI
   55    | Specifier • DecList error

    error  shift, and go to state 47
    ID     shift, and go to state 42

    VarDec   go to state 48
    DecList  go to state 49
    Dec      go to state 50


State 34

   15 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 51


State 35

   51 DefList: Def • DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 52 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 52
    Def              go to state 35


State 36

   30 ParamDec: Specifier • VarDec

    ID  shift, and go to state 42

    VarDec  go to state 53


State 37

   27 FunDec: error LP VarList • RP

    RP  shift, and go to state 54


State 38

   28 VarList: ParamDec • COMMA VarList
   29        | ParamDec •

    COMMA  shift, and go to state 55

    $default  reduce using rule 29 (VarList)


State 39

   26 FunDec: ID LP error • RP

    RP  shift, and go to state 56


State 40

   25 FunDec: ID LP RP •

    $default  reduce using rule 25 (FunDec)


State 41

   24 FunDec: ID LP VarList • RP

    RP  shift, and go to state 57


State 42

   20 VarDec: ID •

    $default  reduce using rule 20 (VarDec)


State 43

   12 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 12 (ExtDecList)


State 44

   22 VarDec: VarDec LB error • RB

    RB  shift, and go to state 58


State 45

   21 VarDec: VarDec LB INT • RB
   23       | VarDec LB INT • RB error

    RB  shift, and go to state 59


State 46

   31 CompSt: LC DefList • StmtList RC

    error   shift, and go to state 60
    INT     shift, and go to state 61
    FLOAT   shift, and go to state 62
    ID      shift, and go to state 63
    MINUS   shift, and go to state 64
    NOT     shift, and go to state 65
    LP      shift, and go to state 66
    LC      shift, and go to state 31
    RETURN  shift, and go to state 67
    IF      shift, and go to state 68
    WHILE   shift, and go to state 69

    RC  reduce using rule 33 (StmtList)

    CompSt    go to state 70
    StmtList  go to state 71
    Stmt      go to state 72
    Exp       go to state 73


State 47

   54 Def: Specifier error • SEMI

    SEMI  shift, and go to state 74


State 48

   21 VarDec: VarDec • LB INT RB
   22       | VarDec • LB error RB
   23       | VarDec • LB INT RB error
   58 Dec: VarDec •
   59    | VarDec • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 75
    LB        shift, and go to state 29

    $default  reduce using rule 58 (Dec)


State 49

   53 Def: Specifier DecList • SEMI
   55    | Specifier DecList • error

    error  shift, and go to state 76
    SEMI   shift, and go to state 77


State 50

   56 DecList: Dec •
   57        | Dec • COMMA DecList

    COMMA  shift, and go to state 78

    $default  reduce using rule 56 (DecList)


State 51

   15 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 15 (StructSpecifier)


State 52

   51 DefList: Def DefList •

    $default  reduce using rule 51 (DefList)


State 53

   21 VarDec: VarDec • LB INT RB
   22       | VarDec • LB error RB
   23       | VarDec • LB INT RB error
   30 ParamDec: Specifier VarDec •

    LB  shift, and go to state 29

    $default  reduce using rule 30 (ParamDec)


State 54

   27 FunDec: error LP VarList RP •

    $default  reduce using rule 27 (FunDec)


State 55

   28 VarList: ParamDec COMMA • VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 36
    StructSpecifier  go to state 8
    VarList          go to state 79
    ParamDec         go to state 38


State 56

   26 FunDec: ID LP error RP •

    $default  reduce using rule 26 (FunDec)


State 57

   24 FunDec: ID LP VarList RP •

    $default  reduce using rule 24 (FunDec)


State 58

   22 VarDec: VarDec LB error RB •

    $default  reduce using rule 22 (VarDec)


State 59

   21 VarDec: VarDec LB INT RB •
   23       | VarDec LB INT RB • error

    error  shift, and go to state 80

    error     [reduce using rule 21 (VarDec)]
    SEMI      reduce using rule 21 (VarDec)
    COMMA     reduce using rule 21 (VarDec)
    ASSIGNOP  reduce using rule 21 (VarDec)
    RP        reduce using rule 21 (VarDec)
    LB        reduce using rule 21 (VarDec)


State 60

   46 Stmt: error • SEMI

    SEMI  shift, and go to state 81


State 61

   76 Exp: INT •

    $default  reduce using rule 76 (Exp)


State 62

   77 Exp: FLOAT •

    $default  reduce using rule 77 (Exp)


State 63

   61 Exp: ID • LP Args RP
   62    | ID • LP RP
   75    | ID •
   79    | ID • LP error RP

    LP  shift, and go to state 82

    $default  reduce using rule 75 (Exp)


State 64

   65 Exp: MINUS • Exp
   81    | MINUS • error

    error  shift, and go to state 83
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 84


State 65

   66 Exp: NOT • Exp
   82    | NOT • error

    error  shift, and go to state 85
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 86


State 66

   60 Exp: LP • Exp RP
   78    | LP • error RP

    error  shift, and go to state 87
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 88


State 67

   36 Stmt: RETURN • Exp SEMI
   49     | RETURN • error SEMI
   50     | RETURN • Exp error

    error  shift, and go to state 89
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 90


State 68

   37 Stmt: IF • LP Exp RP Stmt
   38     | IF • LP Exp RP Stmt ELSE Stmt
   40     | IF • error Exp RP Stmt
   41     | IF • LP error RP Stmt
   42     | IF • LP Exp error Stmt

    error  shift, and go to state 91
    LP     shift, and go to state 92


State 69

   39 Stmt: WHILE • LP Exp RP Stmt
   43     | WHILE • error Exp RP Stmt
   44     | WHILE • LP error RP Stmt
   45     | WHILE • LP Exp error Stmt

    error  shift, and go to state 93
    LP     shift, and go to state 94


State 70

   35 Stmt: CompSt •

    $default  reduce using rule 35 (Stmt)


State 71

   31 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 95


State 72

   32 StmtList: Stmt • StmtList

    error   shift, and go to state 60
    INT     shift, and go to state 61
    FLOAT   shift, and go to state 62
    ID      shift, and go to state 63
    MINUS   shift, and go to state 64
    NOT     shift, and go to state 65
    LP      shift, and go to state 66
    LC      shift, and go to state 31
    RETURN  shift, and go to state 67
    IF      shift, and go to state 68
    WHILE   shift, and go to state 69

    RC  reduce using rule 33 (StmtList)

    CompSt    go to state 70
    StmtList  go to state 96
    Stmt      go to state 72
    Exp       go to state 73


State 73

   34 Stmt: Exp • SEMI
   47     | Exp • error SEMI
   48     | Exp • error
   63 Exp: Exp • LB Exp RB
   64    | Exp • DOT ID
   67    | Exp • STAR Exp
   68    | Exp • DIV Exp
   69    | Exp • PLUS Exp
   70    | Exp • MINUS Exp
   71    | Exp • RELOP Exp
   72    | Exp • AND Exp
   73    | Exp • OR Exp
   74    | Exp • ASSIGNOP Exp
   80    | Exp • LB error RB
   83    | Exp • STAR error
   84    | Exp • DIV error
   85    | Exp • PLUS error
   86    | Exp • MINUS error
   87    | Exp • RELOP error
   88    | Exp • AND error
   89    | Exp • OR error
   90    | Exp • ASSIGNOP error

    error     shift, and go to state 97
    SEMI      shift, and go to state 98
    ASSIGNOP  shift, and go to state 99
    RELOP     shift, and go to state 100
    PLUS      shift, and go to state 101
    MINUS     shift, and go to state 102
    STAR      shift, and go to state 103
    DIV       shift, and go to state 104
    AND       shift, and go to state 105
    OR        shift, and go to state 106
    DOT       shift, and go to state 107
    LB        shift, and go to state 108


State 74

   54 Def: Specifier error SEMI •

    $default  reduce using rule 54 (Def)


State 75

   59 Dec: VarDec ASSIGNOP • Exp

    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 109


State 76

   55 Def: Specifier DecList error •

    $default  reduce using rule 55 (Def)


State 77

   53 Def: Specifier DecList SEMI •

    $default  reduce using rule 53 (Def)


State 78

   57 DecList: Dec COMMA • DecList

    ID  shift, and go to state 42

    VarDec   go to state 48
    DecList  go to state 110
    Dec      go to state 50


State 79

   28 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 28 (VarList)


State 80

   23 VarDec: VarDec LB INT RB error •

    $default  reduce using rule 23 (VarDec)


State 81

   46 Stmt: error SEMI •

    $default  reduce using rule 46 (Stmt)


State 82

   61 Exp: ID LP • Args RP
   62    | ID LP • RP
   79    | ID LP • error RP

    error  shift, and go to state 111
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66
    RP     shift, and go to state 112

    Exp   go to state 113
    Args  go to state 114


State 83

   81 Exp: MINUS error •

    $default  reduce using rule 81 (Exp)


State 84
